examples/positive/classes/class.glask
module Main where
{ class Num a
; instance Num Int

; class Fractional a
; instance Fractional Double


; class Constant a where
  { vaval :: a }

; instance Constant Int where
  { vaval = 23 }

}