examples/negative/annotations/one.glask
module Main where
{ class Num a
; instance Num Int

; class Fractional a
; instance Fractional Double



; malformed :: forall . Maybe -- this indeed fails to type check - the right side of the `.` does not have a kind *

; malformed = malformed

}